--- a/redhat/na2-oess-plugin.spec.tmpl
+++ b/redhat/na2-oess-plugin.spec.tmpl
@@ -1,11 +1,10 @@
 %global commit @@COMMIT@@
-%global shortcommit @@SHORTCOMMIT@@
 
 Summary: nodeagent2 plugin allowing use of OESS
 Name: na2-oess-plugin
-Version: 0.1
-Release: @@DATE@@git%{shortcommit}
-Source0: https://github.com/RENCI-NRIG/na2-oess-plugin/archive/%{commit}/%{name}-%{version}-%{shortcommit}.tar.gz
+Version: @@VERSION@@
+Release: @@DATE@@
+Source0: https://github.com/RENCI-NRIG/na2-oess-plugin/archive/%{commit}/%{name}-%{version}-%{release}.tar.gz
 Vendor: ExoGENI
 Packager: ExoGENI
 License: Eclipse Public License
@@ -31,7 +30,7 @@ This package contains the Exec plugin for nodeagent2.
 It allows nodeagent2 to call scripts for its various operations.
 
 %prep
-%setup -q -n %{name}-%{version}-%{shortcommit}
+%setup -q -n %{name}-%{version}-%{release}
 
 %build
 LANG=en_US.UTF-8 mvn clean package
